# ChangeLog for dev-ruby/ruby-recaptcha
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*ruby-recaptcha-1.0.0 (26 May 2009)

  26 May 2009; Hans de Graaff <graaff@gentoo.org>
  +ruby-recaptcha-1.0.0.ebuild:
  Version bump. Package moved from dev-ruby/recaptcha due to upstream name
  change.
