@@ -1,3 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST ruby-recaptcha-1.0.0.gem 10752 RMD160 35e49ae3a44c02272c6d0b66452e84812c9487b2 SHA1 35b0e70ed0e7b17a652aed3d8fe8504bfae882c5 SHA256 fa51e1bb3c169d67fcd8af0ba2153a1ef9e424a07edd776246b586589957f956
+DIST ruby-recaptcha-1.0.2.gem 12288 RMD160 03bf8028522bf8672e0396b4da996b3afeb5d775 SHA1 c0dbcd28f482113757aa5c2a45c4509d31546c30 SHA256 bc792e56c30fd931220e4f99e0b46d3b84b1583867e7119fd1af7bbd95db67b1
 EBUILD ruby-recaptcha-1.0.0.ebuild 513 RMD160 7201e70bb249d8151555ad136c7c249499ecb16b SHA1 bdb489e9aa4c063e7b21ceb3b97354d8747c7b2c SHA256 6f1eec854b0561276683a0f904b41f99d2d84d011ca4f67b91d43de05177892e
-MISC ChangeLog 329 RMD160 11f86119ea7e193271acd0e06b61c90ef2ea2de2 SHA1 d6f0fa043ff381476b58e70644c3439f0cd829dc SHA256 396afa21a4b747db4942299511ea97c52b8d9f730cb33c0b43f499ee46ff73e1
+EBUILD ruby-recaptcha-1.0.2.ebuild 513 RMD160 d445c43a0ed984d203c24da6c0dda437b7fba656 SHA1 0dea503dbb85ba142ba3035ccd237f866bce8379 SHA256 2fca13a9d1b63c44a10499a33f651ae8636a35450f3aa834a9e014046ad49303
+MISC ChangeLog 579 RMD160 dddc7c51cac7e2c7903f70f2c450418bfbad6e9e SHA1 b9d63746227f0ad6fcafdb2032b96ae07c9c9cc5 SHA256 2656e7676218235f3541926502f5b7ab920a71d3fe25d49be20b0111afa8f3a0
+MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.14 (GNU/Linux)
+
+iEYEARECAAYFAkvkBsMACgkQeM7EJeUH71O1hgCfSfwQGJElpoNRjRHjpZgOCR4m
+RwgAnR8XcCx4Fhn3tuZVLRdxihu9L31C
+=/MYe
+-----END PGP SIGNATURE-----
